Fix overflow issue on certain size screens

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
   -webkit-font-smoothing: antialiased;
   margin: 0;
   color: var(--white);
+  overflow-x: hidden;
 }
 
 /* Reset */
@@ -159,7 +160,7 @@ h2 {
   color: var(--grey-dark);
   font-size: 34px;
   font-style: italic;
-  padding: 0 422px;
+  padding: 0 200px;
 }
 
 /* Footer */
